--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
+      <img src="./images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Non-veg</h5>
         <p class="text-white">Enjoy a variety of flavorful non-veg dishes made with fresh meat and traditional spices. Cooked to perfection for a rich and satisfying experience.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
+      <img src="./images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Veg-items</h5>
         <p class="text-white">Enjoy delicious veg dishes prepared with fresh ingredients and traditional flavors. Healthy, satisfying, and full of taste.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
+      <img src="./images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Fried items</h5>
         <p class="text-white">Crispy, golden fried items made fresh with quality ingredients. Perfectly seasoned for a crunchy and satisfying taste.</p>
@@ -90,7 +90,7 @@
   <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
     <div class="col" id="Biri">
     <div class="card h-100">
-  <img src="/images/biriyani.webp" class="card-img-top img-fluid">
+  <img src="./images/biriyani.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Biriyani</h5>
     <p class="card-text">Biryani is a rich and aromatic rice dish layered with perfectly spiced meat and fragrant basmati rice. Slow-cooked to perfection, it delivers bold flavors and irresistible aroma in every bite.</p>
@@ -102,7 +102,7 @@
 
 <div class="col" id="orders">
 <div class="card h-100">
-  <img src="/images/mandhi.webp" class="card-img-top img-fluid">
+  <img src="./images/mandhi.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Mandhi</h5>
     <p class="card-text">Mandhi features fragrant rice and juicy, slow-cooked meat infused with mild Arabian spices and a rich smoky aroma.</p>
@@ -114,7 +114,7 @@
 
 <div class="col">
 <div class="card h-100">
-  <img src="/images/food_image_2_1080x1080.webp" class="card-img-top img-fluid">
+  <img src="./images/food_image_2_1080x1080.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Porotta & Beef</h5>
     <p class="card-text">Porotta & Beef is a delicious Kerala classic featuring soft, flaky porottas paired with rich, slow-cooked spicy beef curry. A hearty and flavorful combo loved by food lovers.</p>
@@ -142,7 +142,7 @@
   <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
     <div class="col" id="Biri">
     <div class="card h-100">
-  <img src="/images/idli.webp" class="card-img-top img-fluid">
+  <img src="./images/idli.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Idli</h5>
     <p class="card-text">Idli is a soft and fluffy South Indian classic made from fermented rice and lentils. Light, healthy, and comforting, it pairs perfectly with fresh chutney and hot sambar.</p>
@@ -154,7 +154,7 @@
 
 <div class="col" id="orders">
 <div class="card h-100">
-  <img src="/images/kappa.webp" class="card-img-top img-fluid">
+  <img src="./images/kappa.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Kappa & Fish curry</h5>
     <p class="card-text">Kappa and Fish Curry is a traditional Kerala delicacy featuring soft, perfectly cooked tapioca served with rich, tangy fish curry. This classic combo delivers bold coastal flavors and comforting taste in every bite.</p>
@@ -166,7 +166,7 @@
 
 <div class="col">
 <div class="card h-100">
-  <img src="/images/kanji.webp" class="card-img-top img-fluid">
+  <img src="./images/kanji.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Gruel</h5>
     <p class="card-text">Gruel is a light and nourishing dish made from gently cooked rice, offering comfort and warmth in every spoonful. Simple, soothing, and wholesome, it is ideal for a healthy and satisfying meal.</p>
@@ -178,7 +178,7 @@
 
 <div class="col">
 <div class="card h-100">
-  <img src="/images/food_set2_image_1_1080x1080.webp" class="card-img-top img-fluid">
+  <img src="./images/food_set2_image_1_1080x1080.webp" class="card-img-top img-fluid">
   <div class="card-body">
     <h5 class="card-title">Meals</h5>
     <p class="card-text">Meals is a wholesome traditional platter featuring steamed rice served with a variety of flavorful curries, vegetables, and sides. Balanced, satisfying, and comforting, it offers a complete dining experience in every serving.</p>
@@ -222,4 +222,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html> 
