--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
+      <img src="/images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Non-veg</h5>
         <p class="text-white">Enjoy a variety of flavorful non-veg dishes made with fresh meat and traditional spices. Cooked to perfection for a rich and satisfying experience.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
+      <img src="/images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Veg-items</h5>
         <p class="text-white">Enjoy delicious veg dishes prepared with fresh ingredients and traditional flavors. Healthy, satisfying, and full of taste.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
+      <img src="/images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Fried items</h5>
         <p class="text-white">Crispy, golden fried items made fresh with quality ingredients. Perfectly seasoned for a crunchy and satisfying taste.</p>
@@ -94,7 +94,7 @@
   <div class="card-body">
     <h5 class="card-title">Biriyani</h5>
     <p class="card-text">Biryani is a rich and aromatic rice dish layered with perfectly spiced meat and fragrant basmati rice. Slow-cooked to perfection, it delivers bold flavors and irresistible aroma in every bite.</p>
-    <h2 class="text-danger">At Just..₹149.00</h2>
+    <h2 class="text-danger">₹149.00</h2>
     <a href="#" class="btn btn-primary">Grab yours..</a>
   </div>
 </div>
@@ -118,7 +118,7 @@
   <div class="card-body">
     <h5 class="card-title">Porotta & Beef</h5>
     <p class="card-text">Porotta & Beef is a delicious Kerala classic featuring soft, flaky porottas paired with rich, slow-cooked spicy beef curry. A hearty and flavorful combo loved by food lovers.</p>
-    <h2 class="text-danger">Combo..for Just ₹140.00</h2>
+    <h2 class="text-info">Combo.for ₹140.00</h2>
     <a href="#" class="btn btn-primary">Grab yours...</a>
   </div>
 </div>
@@ -130,7 +130,7 @@
   <div class="card-body">
     <h5 class="card-title">Dosa</h5>
     <p class="card-text">Dosa is a thin, crispy South Indian delight made from fermented rice and lentil batter, cooked to golden perfection. Light, flavorful, and satisfying, it pairs perfectly with chutney and sambar for a classic taste experience.</p>
-    <h2 class="text-danger">For just ₹119.00</h2>
+    <h2 class="text-danger">₹119.00</h2>
     <a href="#" class="btn btn-primary">Grab yours...</a>
   </div>
   </div>
@@ -146,7 +146,7 @@
   <div class="card-body">
     <h5 class="card-title">Idli</h5>
     <p class="card-text">Idli is a soft and fluffy South Indian classic made from fermented rice and lentils. Light, healthy, and comforting, it pairs perfectly with fresh chutney and hot sambar.</p>
-    <h2 class="text-danger">At Just..₹99.00</h2>
+    <h2 class="text-danger">₹99.00</h2>
     <a href="#" class="btn btn-primary">Grab yours..</a>
   </div>
 </div>
@@ -158,7 +158,7 @@
   <div class="card-body">
     <h5 class="card-title">Kappa & Fish curry</h5>
     <p class="card-text">Kappa and Fish Curry is a traditional Kerala delicacy featuring soft, perfectly cooked tapioca served with rich, tangy fish curry. This classic combo delivers bold coastal flavors and comforting taste in every bite.</p>
-    <h2 class="text-danger">At just...₹150.00</h2>
+    <h2 class="text-danger">₹150.00</h2>
     <a href="#" class="btn btn-primary">Grab yours..</a>
   </div>
 </div>
@@ -170,7 +170,7 @@
   <div class="card-body">
     <h5 class="card-title">Gruel</h5>
     <p class="card-text">Gruel is a light and nourishing dish made from gently cooked rice, offering comfort and warmth in every spoonful. Simple, soothing, and wholesome, it is ideal for a healthy and satisfying meal.</p>
-    <h2 class="text-danger">for Just ₹80.00</h2>
+    <h2 class="text-danger">₹80.00</h2>
     <a href="#" class="btn btn-primary">Grab yours...</a>
   </div>
 </div>
@@ -182,7 +182,58 @@
   <div class="card-body">
     <h5 class="card-title">Meals</h5>
     <p class="card-text">Meals is a wholesome traditional platter featuring steamed rice served with a variety of flavorful curries, vegetables, and sides. Balanced, satisfying, and comforting, it offers a complete dining experience in every serving.</p>
-    <h2 class="text-danger">For just ₹50.00</h2>
+    <h2 class="text-danger">₹50.00</h2>
+    <a href="#" class="btn btn-primary">Grab yours...</a>
+  </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="container-fluid my-3">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
+    <div class="col" id="Biri">
+    <div class="card h-100">
+  <img src="./images/noodles.webp" class="card-img-top img-fluid">
+  <div class="card-body">
+    <h5 class="card-title">Chicken Noodles</h5>
+    <p class="card-text">Chicken Noodles is a flavorful dish made with tender chicken, stir-fried noodles, and fresh vegetables tossed in savory sauces. Light yet satisfying, it delivers a perfect balance of taste, aroma, and texture in every bite.</p>
+    <h2 class="text-danger">₹80.00</h2>
+    <a href="#" class="btn btn-primary">Grab yours..</a>
+  </div>
+</div>
+</div>
+
+<div class="col" id="orders">
+<div class="card h-100">
+  <img src="./images/konnthal.webp" class="card-img-top img-fluid">
+  <div class="card-body">
+    <h5 class="card-title">Koonthal Roast</h5>
+    <p class="card-text">Koonthal Roast is a spicy Kerala seafood delicacy made with tender squid slow-roasted in aromatic spices and onions. Crispy, flavorful, and rich in taste, it delivers a bold coastal experience in every bite.</p>
+    <h2 class="text-danger">₹150.00</h2>
+    <a href="#" class="btn btn-primary">Grab yours..</a>
+  </div>
+</div>
+</div>
+
+<div class="col">
+<div class="card h-100">
+  <img src="./images/karimeen.webp" class="card-img-top img-fluid">
+  <div class="card-body">
+    <h5 class="card-title">Karimeen pollichath</h5>
+    <p class="card-text">Karimeen Pollichathu is a classic Kerala delicacy featuring pearl spot fish marinated in aromatic spices and pan-roasted in banana leaf. Juicy, smoky, and richly spiced, it delivers an authentic coastal flavor in every bite.</p>
+    <h2 class="text-danger">₹150.00</h2>
+    <a href="#" class="btn btn-primary">Grab yours...</a>
+  </div>
+</div>
+</div>
+
+<div class="col">
+<div class="card h-100">
+  <img src="./images/appam & mutton stew.webp" class="card-img-top img-fluid">
+  <div class="card-body">
+    <h5 class="card-title">Appam & Mutton Stew</h5>
+    <p class="card-text">Appam & Mutton Stew is a comforting Kerala classic featuring soft, lacy appams paired with slow-cooked mutton in a mildly spiced, creamy stew. Rich, aromatic, and delicately flavored, this timeless combination offers a truly satisfying taste experience.</p>
+    <h2 class="text-danger">₹120.00</h2>
     <a href="#" class="btn btn-primary">Grab yours...</a>
   </div>
   </div>
@@ -222,5 +273,4 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html> 
