--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
+      <img src="./images/Carcousal.jpg" class=" slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Non-veg</h5>
         <p class="text-white">Enjoy a variety of flavorful non-veg dishes made with fresh meat and traditional spices. Cooked to perfection for a rich and satisfying experience.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
+      <img src="./images/Carcousal2.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Veg-items</h5>
         <p class="text-white">Enjoy delicious veg dishes prepared with fresh ingredients and traditional flavors. Healthy, satisfying, and full of taste.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
+      <img src="./images/Carcousal3.jpg" class="slide d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="text-white">Fried items</h5>
         <p class="text-white">Crispy, golden fried items made fresh with quality ingredients. Perfectly seasoned for a crunchy and satisfying taste.</p>
@@ -274,3 +274,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html> 
+
