--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#footer" aria-disabled="true">Location</a>
+          <a class="nav-link" href="#loc" aria-disabled="true">Location</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -255,7 +255,7 @@
       </div>
 
       <!-- Google Map -->
-      <div class="col-auto">
+      <div class="col-auto" id="loc">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d311.477014542517!2d75.80781487638154!3d11.264801753880148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1768828140749!5m2!1sen!2sin"
           width="300"
@@ -274,4 +274,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html> 
+
 
